# ISS_SILSIM

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  extension.csv  makefile  requirements.txt  run_and_animate.sh  run_and_plot.sh  sample.csv  sample.json  visualizer
.github/workflows/: clang-format-check.yml
analysis/: rasaero_analysis.py
animation/: README.md
animation/python_scripts/: error_correction.py
animation/rocket-renderer/: index.html  main.js  package-lock.json  package.json
animation/rocket-renderer/heightmaps/10m/: heightmap_10m_auto.pgw  heightmap_10m_normal.pgw  output_USGS10m.tif  output_USGS10m.tif.aux.xml  rasters_USGS10m.tar
animation/rocket-renderer/heightmaps/1m/: heightmap_1m_auto.pgw  heightmap_1m_normal.pgw  output_USGS1m.tif  rasters_USGS1m.tar
animation/rocket-renderer/heightmaps/30m (practically unusable)/: output_USGS30m.tif  output_USGS30m.tif.aux.xml  rasters_USGS30m.tar
animation/rocket-renderer/heightmaps/B1/: b1 dem.tar  b1 dem.tif  b1 dem.tif.aux.xml  heightmap_b1_auto.pgw  test.pgw
animation/rocket-renderer/heightmaps/B3QL1/: b3_ql1.tar  b3_ql3.tif  b3_ql3.tif.aux.xml  heightmap_b3ql1_auto.pgw
animation/rocket-renderer/heightmaps/NASADEM (practically unusable)/: output_NASADEM.tif  output_NASADEM.tif.aux.xml  rasters_NASADEM.tar
data/: wind_data_sample.txt  winds_aloft_sample.csv
data_processing/: data.csv  flap_debug.py  fsm_debug.py  kalman_debug.py  logutils.py  magnetometer_debug.py  plotter.py  rocket.stl  sensor_debug.py  wind_analysis.py
flight_src/mcu/: CMakeLists.txt
flight_src/mcu/lib/FifoBuffer/: FifoBuffer.h
flight_src/mcu/lib/ServoControl/: ServoControl.cpp  ServoControl.h
flight_src/mcu/lib/emulation/: Arduino.h  ChRt.cpp  ChRt.h  EMU.cpp  Eigen30.h  GlobalVars.h  KX134-1211.h  LSM9DS1_Types.h  MS5611.h  PWMServo.h  RH_RF95.h  SD.h  SPI.h  SparkFunLSM9DS1.h  SparkFun_Qwiic_KX13X.h  SparkFun_u-blox_GNSS_Arduino_Library.h  Wire.h  ZOEM8Q0.hpp
flight_src/mcu/lib/teensyShared/: ActiveControl.cpp  ActiveControl.h  MadgwickAHRS.cpp  MadgwickAHRS.h  VoltageSensor.h  dataLog.cpp  dataLog.h  kalmanFilter.cpp  kalmanFilter.h  rk4.cpp  rk4.h  rocketFSM.cpp  rocketFSM.h  sensors.cpp  sensors.h  servoControl.cpp  thresholds.h
flight_src/mcu/src/mcu_ac/: main.cpp
include/: Engine.cpp  Engine.h  PhysicsEngine.cpp  PhysicsEngine.h  Propulsion.cpp  Propulsion.h  Rocket.cpp  Rocket.h  Sensor.cpp  Sensor.h  Simulation.cpp  Simulation.h  Vector3.cpp  quaternion.h
includes/: Atmosphere.h  CpuState.h  CpuStateContext.h  CpuThread.h  Flaps.h  Parachute.h  PhysicsEngine.h  Propulsion.h  RASAeroImport.h  Rocket.h  Sensor.h  Simulation.h
lib/Vector3/: Vector3.cpp  Vector3.h
lib/quaternion/: quaternion.cpp
logs/: logs_test.txt
ork_files/: rocket.ork  rocket.rkt  rocket_csv.csv
scripts/: build-and-run-linux.sh  clang-format.sh  run_debug.sh  wind.sh
sim_data/: animation.py  doge.stl  draw_rocket.cpp  plotter.py  test.py
src/: Atmosphere.cpp  CpuState.cpp  CpuState.h  CpuStateContext.cpp  CpuStateContext.h  CpuThread.cpp  CpuThread.h  GenerateParameterJSON.py  Parachute.cpp  PhysicsEngine.cpp  PhysicsEngine.h  Propulsion.cpp  Propulsion.h  RASAeroImport.cpp  Rocket.cpp  Rocket.h  SILSIM.h  Sensor.cpp  Sensor.h  Simulation.cpp  Simulation.h  ThreadImpl.cpp  cpu_state_testing_main.cpp  logger.h  main.cpp  main2.cpp  rapidcsv.h
src/Aero/: CMakeLists.txt  RASAeroImport.cpp  RASAeroImport.h
src/Atmosphere/: Atmosphere.cpp  Atmosphere.h  CMakeLists.txt
src/ControlSurfaces/: CMakeLists.txt  Flaps.cpp  Flaps.h
src/CpuEmulation/: CMakeLists.txt  CpuState.cpp  CpuState.h  CpuStateContext.cpp  CpuStateContext.h  CpuThread.cpp  CpuThread.h
src/Physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h
src/Propulsion/: CMakeLists.txt  Propulsion.cpp  Propulsion.h
src/Rocket/: CMakeLists.txt  GenerateParameterJSON.py  GetOrkValues.py  Rocket.cpp  Rocket.h  components.py  values.txt
src/Sensors/: CMakeLists.txt  Sensor.cpp  Sensor.h
src/SimulationCore/: CMakeLists.txt  Rocket.cpp  Rocket.h  Simulation.cpp  Simulation.h
thrust_curves/: AeroTech_M2500T.csv  cesaroni_n5800.csv  data.txt
utils/RASAero_fetch/: fetch_csv.bat  fetch_csv.sh  metadata.txt
utils/RASAero_fetch/cdx1/: Intrepid_5800_mk6_000.CDX1  Intrepid_5800_mk6_020.CDX1  Intrepid_5800_mk6_040.CDX1  Intrepid_5800_mk6_060.CDX1  Intrepid_5800_mk6_080.CDX1  Intrepid_5800_mk6_100.CDX1  Intrepid_II_000.CDX1  Intrepid_II_0000.CDX1  Intrepid_II_0125.CDX1  Intrepid_II_0375.CDX1  Intrepid_II_0500.CDX1  Intrepid_II_0625.CDX1  Intrepid_II_0750.CDX1  Intrepid_II_0875.CDX1  Intrepid_II_100.CDX1  Intrepid_II_1000.CDX1  Intrepid_II_125.CDX1  Intrepid_II_250.CDX1  Intrepid_II_500.CDX1  Intrepid_II_625.CDX1  Intrepid_II_750.CDX1  Intrepid_II_875.CDX1  Test_5800_mk3_000.cdx1  Test_5800_mk3_050.cdx1  Test_5800_mk3_100.cdx1
utils/RASAero_fetch/output/: 00_000.txt  00_0000.txt  00_0125.txt  00_020.txt  00_0250.txt  00_040.txt  00_0500.txt  00_060.txt  00_080.txt  00_0875.txt  00_100.txt  00_1000.txt  00_625.txt  00_750.txt  01_000.txt  01_0000.txt  01_0125.txt  01_020.txt  01_0375.txt  01_040.txt  01_060.txt  01_080.txt  01_0875.txt  01_100.txt  01_500.txt  01_625.txt  01_750.txt  02_000.txt  02_0000.txt  02_020.txt  02_040.txt  02_0500.txt  02_060.txt  02_0625.txt  02_0750.txt  02_080.txt  02_0875.txt  02_100.txt  02_1000.txt  02_125.txt  (+176 more)
utils/RASAero_fetch/src/: consolidate.py  script.py
visualizer/: animation.py  draw_rocket.cpp
winds-aloft/: winddata.json
